# auth

./: .codespellignore  .env.template  .gitignore  .pre-commit-config.yaml  .tmuxp.yml  Dockerfile  README.md  TODO.md  docker-compose.yml  env.example  justfile  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml
docs/: gettings-started.md  index.md
docs/adr/: claim_as_primitive_type.md  template.md
docs/architecture/: ddd-architecture-overview.md
docs/arhitecture/: api.md  overview.md
docs/concepts/: jwt.md
docs/experiment_logs/: claim_as_value_object.md  service_as_dataclass.md
docs/security/: jwt.md
migrations/: env.py
migrations/versions/: 8680c7ebf039_add_outbox.py  a84999fd3036_fix_account_id_2.py  b08a1223de1c_create_refresh_token_and_family.py  c2c4b6dd81d0_username_is_optional.py  c5a3b7903486_fix_account_id.py
scripts/: up.sh
src/: exceptions.py
src/application/: __init__.py  exceptions.py  session.py  uow.py
src/application/login/: __init__.py  handler.py  service.py
src/application/register/: __init__.py  service.py
src/application/services/: login.py  me.py  register.py
src/bootstrap/: __init__.py  login.py  wiring.py
src/domain/: entities.py  events.py  exceptions.py  ports.py  primitives.py  result.py  specifications.py  types.py  value_objects.py
src/domain/factories/: __init__.py  claims.py
src/domain/policies/: __init__.py  base.py  password.py  token.py
src/domain/services/: __init__.py  login.py
src/domain/value_objects/: __init__.py  account.py  claims.py  issue.py  time.py  token.py  value_objects.py
src/infra/: config.py  constants.py  dto.py  exceptions.py  key_provider.py  mappers.py
src/infra/claims/: __init__.py  entities.py  errors.py  factories.py  policies.py  value_objects.py
src/infra/crypto/: bcrypt.py
src/infra/jwt_codec/: jose.py
src/infra/jwt_service/: exceptions.py  jose.py
src/infra/messaging/: outbox_publisher.py
src/infra/orm/: session.py
src/infra/orm/models/: __init__.py  account.py  base.py  outbox.py  refresh_token.py
src/infra/repositories/: outbox.py
src/infra/repositories/account/: db.py
src/presentation/: dependencies.py  exception_handlers.py  main.py  utils.py  validators.py
src/presentation/api/: login.py  me.py  register.py  signup.py
tests/: __init__.py  cases.py  conftest.py  parsers.py  urls.py  utils.py
tests/application/: conftest.py  test_login_service.py  test_register_service.py
tests/domain/: conftest.py  test_entities.py  test_result.py  test_specifications.py  test_value_objects.py
tests/integration/: test_login.py  test_register.py
tests/unit/: conftest.py
tests/unit/claims/: test_factory.py
tests/unit/domain/policies/: test_password_policies.py  test_token_policies.py
tests/unit/infra/claims/: test_factory.py
tests/unit/presentation/: test_exception_handling.py  test_register.py
tests/unit/utils/: test_now_ts.py
