[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.16.5",
    "antidote>=2.0.0",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.118.0",
    "passlib[argon2,argon2-cffi,bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "factory-boy>=3.3.3",
    "faker>=37.8.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "hypothesis>=6.140.2",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-async>=0.1.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-pretty>=1.3.0",
    "pytest-testmon>=2.1.3",
    "pytest-timeout>=2.4.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.3",
    "sqlalchemy-utils>=0.42.0",
    "time-machine>=2.19.0",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]

# ---- basedpyright ----
[tool.basedpyright]
include = ["src"]
pythonVersion = "3.12"

# ---- ruff ----
[tool.ruff]
src = ["src"]
line-length = 90
target-version = "py312"
extend-exclude = [".venv", "migrations"]
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "UP",
    "B", "SIM", "C4", "N", "T20", "ANN",
]
ignore = [
    "E203",
    "E501",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201"]

# ---- isort ----
[tool.isort]
skip = ["migrations/", "docs/", ".venv/"]
profile = "black"
py_version = 312
src_paths = ["src", "tests"]
line_length = 90
combine_as_imports = true
known_first_party = ["core", "src"]
known_domain = ["src.domain"]
known_infra = ["src.infra"]
known_application = ["src.application"]
known_presentation = ["src.presentation"]
known_bootstrap = ["src.bootstrap"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DOMAIN",
    "INFRA",
    "APPLICATION",
    "BOOTSTRAP",
    "PRESENTATION",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
lines_after_imports = 2

# ---- mypy ----
# [tool.mypy]
# python_version = 3.12
# warn_unused_ignores = True
# warn_redundant_casts = True
# warn_return_any = True
# disallow_untyped_defs = True
# no_implicit_optional = True
# exclude = (^migrations/versions/)
# plugins = pydantic.mypy


[tool.codespell]
